docs/version-1.35/modules/pt/nav.adoc
include::partial$variables.adoc[]
* xref:introduction.adoc[Introdução]
* xref:quick-start.adoc[]
* Tutoriais
** xref:tutorials/writing-policies/index.adoc[]
*** xref:tutorials/writing-policies/CEL/01-intro-cel.adoc[]
**** xref:tutorials/writing-policies/CEL/02-reusing-vap.adoc[]
**** xref:tutorials/writing-policies/CEL/03-context-aware.adoc[]
**** xref:tutorials/writing-policies/CEL/04-example-sigstore.adoc[]
*** xref:tutorials/writing-policies/rust/01-intro-rust.adoc[]
**** xref:tutorials/writing-policies/rust/02-create-policy.adoc[]
**** xref:tutorials/writing-policies/rust/03-define-policy-settings.adoc[]
**** xref:tutorials/writing-policies/rust/04-write-validation-logic.adoc[]
**** xref:tutorials/writing-policies/rust/05-mutation-policy.adoc[]
**** xref:tutorials/writing-policies/rust/06-logging.adoc[]
**** xref:tutorials/writing-policies/rust/07-build-and-distribute.adoc[]
**** xref:tutorials/writing-policies/rust/08-raw-policies.adoc[]
*** xref:tutorials/writing-policies/go/01-intro-go.adoc[]
**** xref:tutorials/writing-policies/go/02-scaffold.adoc[]
**** xref:tutorials/writing-policies/go/03-policy-settings.adoc[]
**** xref:tutorials/writing-policies/go/04-validation.adoc[]
**** xref:tutorials/writing-policies/go/05-e2e-tests.adoc[]
**** xref:tutorials/writing-policies/go/06-logging.adoc[]
**** xref:tutorials/writing-policies/go/07-automate.adoc[]
**** xref:tutorials/writing-policies/go/08-distribute.adoc[]
**** xref:tutorials/writing-policies/go/09-validation-with-queries.adoc[]
**** xref:tutorials/writing-policies/go/10-raw-policies.adoc[]
*** xref:tutorials/writing-policies/rego/01-intro-rego.adoc[]
**** xref:tutorials/writing-policies/rego/02-builtin-support.adoc[]
**** Open Policy Agent
***** xref:tutorials/writing-policies/rego/open-policy-agent/01-intro.adoc[]
***** xref:tutorials/writing-policies/rego/open-policy-agent/02-create-policy.adoc[]
***** xref:tutorials/writing-policies/rego/open-policy-agent/03-build-and-run.adoc[]
***** xref:tutorials/writing-policies/rego/open-policy-agent/04-distribute.adoc[]
***** xref:tutorials/writing-policies/rego/open-policy-agent/05-raw-policies.adoc[]
**** Gatekeeper
***** xref:tutorials/writing-policies/rego/gatekeeper/01-intro.adoc[]
***** xref:tutorials/writing-policies/rego/gatekeeper/02-create-policy.adoc[]
***** xref:tutorials/writing-policies/rego/gatekeeper/03-build-and-run.adoc[]
***** xref:tutorials/writing-policies/rego/gatekeeper/04-distribute.adoc[]
*** xref:tutorials/writing-policies/dotnet.adoc[]
*** TypeScript
**** xref:tutorials/writing-policies/typescript/01-intro-typescript.adoc[]
**** xref:tutorials/writing-policies/typescript/02-scaffold.adoc[]
**** xref:tutorials/writing-policies/typescript/03-policy-settings.adoc[]
**** xref:tutorials/writing-policies/typescript/04-validation.adoc[]
**** xref:tutorials/writing-policies/typescript/05-e2etests.adoc[]
*** xref:tutorials/writing-policies/swift.adoc[]
*** xref:tutorials/writing-policies/other-languages.adoc[]
*** WASI
**** xref:tutorials/writing-policies/wasi/01-intro-wasi.adoc[]
**** xref:tutorials/writing-policies/wasi/02-raw-policies.adoc[]
*** xref:tutorials/writing-policies/metadata.adoc[]
** Testando políticas
*** xref:tutorials/testing-policies/index.adoc[]
*** xref:tutorials/testing-policies/02-policy-authors.adoc[]
*** xref:tutorials/testing-policies/03-cluster-operators.adoc[]
** xref:tutorials/verifying-kubewarden.adoc[]
** xref:tutorials/publish-policy-to-artifact-hub.adoc[]
* Explicações
** xref:explanations/mutating-policies.adoc[]
** xref:explanations/context-aware-policies.adoc[]
** xref:explanations/policy-groups.adoc[]
** xref:explanations/certificates.adoc[]
** xref:explanations/distributing-policies.adoc[]
** Comparações
*** xref:explanations/comparisons/opa-comparison.adoc[]
** xref:explanations/audit-scanner/audit-scanner.adoc[]
*** xref:explanations/audit-scanner/limitations.adoc[]
*** xref:explanations/audit-scanner/policy-reports.adoc[]
** xref:explanations/architecture.adoc[{short-project-name} arquitetura]
* Tutoriais
** xref:howtos/tasks.adoc[]
** xref:howtos/install-kwctl.adoc[Instalar `kwctl`]
** xref:howtos/production-deployments.adoc[Implantações em produção]
** xref:howtos/deploy-at-scale.adoc[Implantação em larga escala]
** xref:howtos/audit-scanner.adoc[]
** xref:howtos/policies.adoc[]
** xref:howtos/policies-eval-resources-in-controller-namespace.adoc[]
** xref:howtos/emergency-disable.adoc[]
** Configurando Servidores de Política
*** xref:howtos/policy-servers/01-custom-cas.adoc[Usando CAs personalizadas]
*** xref:howtos/policy-servers/02-private-registry.adoc[]
*** xref:howtos/policy-servers/03-production-deployments.adoc[Implantações em produção]
*** xref:howtos/policy-servers/04-using-proxies.adoc[Usando proxies]
*** xref:howtos/policy-servers/05-private-sigstore.adoc[Configurando Servidores de Política para instâncias privadas do Sigstore]
** xref:howtos/policy-groups.adoc[Grupos de políticas]
** xref:howtos/psp-migration.adoc[Migração do PSP]
** xref:howtos/vap-migration.adoc[]
** xref:howtos/pod-security-admission-with-kubewarden.adoc[Admissão de Segurança para Pods]
** xref:howtos/custom-certificate-authorities.adoc[]
** xref:howtos/proxy-configuration.adoc[]
** xref:howtos/raw-policies.adoc[]
** xref:howtos/argocd-installation.adoc[]
** xref:howtos/security-hardening/security-hardening.adoc[Segurança]
*** xref:howtos/security-hardening/secure-supply-chain.adoc[]
*** xref:howtos/security-hardening/webhook-mtls.adoc[Habilitar mTLS com K3s]
** Air gap
*** xref:howtos/airgap/01-requirements.adoc[Requisitos]
*** xref:howtos/airgap/02-install.adoc[Instalação]
*** xref:howtos/airgap/03-hauler.adoc[Instalação do Hauler]
** Inícios rápidos de telemetria
*** xref:howtos/telemetry/10-opentelemetry-qs.adoc[]
*** xref:howtos/telemetry/20-tracing-qs.adoc[]
*** xref:howtos/telemetry/30-metrics-qs.adoc[]
*** xref:howtos/telemetry/40-custom-otel-collector.adoc[]
** xref:howtos/Rancher-Fleet.adoc[Rancher Fleet]
** Extensão da interface do Rancher
*** xref:howtos/ui-extension/01-install.adoc[Início rápido]
*** xref:howtos/ui-extension/02-metrics.adoc[]
*** xref:howtos/ui-extension/03-tracing.adoc[]
** Coleção de Aplicativos Rancher
*** xref:howtos/application-collection/01-verify-images.adoc[Verificar imagens]
** Soluções alternativas
*** xref:howtos/workarounds/policy-server-certificate-expiry.adoc[Rotação de certificados, lançamentos ≥ v1.16]
** xref:howtos/contribution-guide/contribution-guide.adoc[]
*** xref:howtos/contribution-guide/contributing.adoc[Contribuindo para a documentação]
*** xref:howtos/contribution-guide/suggesting-an-improvement.adoc[Melhorando a documentação]
** xref:howtos/gatekeeper-migration.adoc[]
* Referência
** xref:reference/CRDs.adoc[]
** xref:reference/dependency-matrix.adoc[]
** xref:reference/artifacts.adoc[Artefatos]
** xref:reference/upgrade-path.adoc[]
** xref:reference/metrics-reference.adoc[]
** xref:reference/monitor-mode.adoc[]
** Especificação de políticas
*** xref:reference/spec/01-intro-spec.adoc[]
*** xref:reference/spec/02-settings.adoc[]
*** xref:reference/spec/03-validating-policies.adoc[]
*** xref:reference/spec/04-mutating-policies.adoc[]
*** xref:reference/spec/05-context-aware-policies.adoc[]
*** Capacidades do host
**** xref:reference/spec/host-capabilities/01-intro-host-capabilities.adoc[]
**** xref:reference/spec/host-capabilities/02-signature-verifier-policies.adoc[]
**** xref:reference/spec/host-capabilities/03-container-registry.adoc[]
**** xref:reference/spec/host-capabilities/04-net.adoc[]
**** xref:reference/spec/host-capabilities/05-crypto.adoc[]
**** xref:reference/spec/host-capabilities/06-kubernetes.adoc[]
** xref:reference/oci-registries-support.adoc[]
** Segurança
*** xref:reference/security-hardening/webhooks-hardening.adoc[Webhooks]
** xref:reference/threat-model.adoc[]
** xref:reference/policy-evaluation-timeout.adoc[]
** xref:reference/verification-config.adoc[]
** xref:reference/sources_yaml.adoc[]
** xref:reference/kwctl-cli.adoc[`kwctl` CLI]
** xref:reference/policy-server-cli.adoc[CLI do Servidor de Política]
* xref:personas.adoc[Para quem?]
* xref:use-cases.adoc[Casos de uso]
* xref:organization.adoc[Organização]
* xref:enterprise.adoc[Enterprise]
* xref:glossary.adoc[]
* xref:disclosure.adoc[]
